# ai-website-analyzer

./: .gitignore  README.md  USAGE.md  browsing_session_1758421101.json  browsing_session_1758422005.json  config.example.env  fixed_product_analyzer_tool.py  install.py  mermaid_feature_map.mmd  mermaid_page_types.mmd  mermaid_user_flow.mmd  product_analysis_1758434886.json  product_analyzer_tool.py  pyproject.toml  quick_claude_test.py  requirements.txt  setup.py  simple_test.py  smart_browsing_session_1758426835.json  smart_browsing_session_1758430108.json  test_fix.py  test_product_analyzer.py
analysis_output/: all_diagrams_www.w3schools.com_20250920_234504.md  analysis_www.w3schools.com_20250920_234504.json  diagram_feature_map_www.w3schools.com_20250920_234504.md  diagram_page_types_www.w3schools.com_20250920_234504.md  diagram_user_flow_www.w3schools.com_20250920_234504.md  summary_www.w3schools.com_20250920_234504.md  user_stories_www.w3schools.com_20250920_234504.md
examples/: complete_example.py  demo.py  dynamic_demo.py  product_analysis_demo.py  simple_demo.py  smart_demo.py  truly_dynamic_demo.py
scripts/: setup.py
src/: __init__.py  ai_content_analyzer.py  browser_automation.py  dynamic_browser.py  enhanced_flow_visualizer.py  error_handling.py  fixed_product_analyzer_browser.py  inefficiency_dashboard.py  intelligent_browser.py  main.py  product_analyzer_browser.py  simple_browser.py  smart_browser.py  truly_dynamic_browser.py  user_journey_mapper.py  website_analyzer.py
test_output/: analysis_httpbin.org_20250923_124022.json  (+3 more)
tests/: test_basic.py
(+19 files in other folders)
